# doclearn

./: .cursorrules  CHANGELOG.md  Dockerfile  LICENSE  PRIVACY.md  README.md  pyproject.toml
.github/workflows/: main.yml
api/: routes.py
docs/code/: api.md  introduction.md  main.md
docs/code/api/: requests.md  routes.md
docs/code/core/: filters.md
src/doclearn/: config.py  main.py
src/doclearn/api/: routes.py
src/doclearn/core/: filters.py  github_client.py  google_client.py
src/doclearn/docs/code/: api.md  core.md  introduction.md  main.md
src/doclearn/docs/code/api/: requests.md  routes.md
src/doclearn/docs/code/core/: filters.md  github_client.md  google_client.md
