[project]
name = "doclearn"
version = "1.3.0"
description = "A project that allows AI to learn and update through GitHub documentation."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.112.1",
    "httpx>=0.27.0",
    "uvicorn>=0.30.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/doclearn"]

[tool.hatch.build.targets.sdist]
packages = ["src/doclearn"]

[tool.hatch.metadata]
name = "doclearn"
version = "0.1.0"
description = "A project that allows AI to learn and update through GitHub documentation."
authors = ["Caio Barbieri <caio@lombello.com>"]
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"

[tool.uv]
dev-dependencies = [
    "cz-conventional-gitmoji>=0.3.3",
]

[tool.commitizen]
name = "cz_gitmoji"
version = "1.3.0"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version",
]
changelog_file = "CHANGELOG.md"
